# tidewater

./: .gitignore  Makefile  README.md  conftest.py  requirements.ci  requirements.txt  setup.cfg  setup.py
experiments/: ucr_experiments.sh  ucr_pipeline.py
experiments/utils/: __init__.py
tests/: test_adapters_docker.py  test_anomaly_slicer.py  test_base_datatype.py  test_centroid_computation.py  test_clustering.py  test_encoders.py  test_global.py  test_grid_space_encoder.py  test_label_reshaper.py  test_loader.py  test_metrics.py  test_normalizer.py  test_pipeline.py  test_range.py  test_scaler.py  test_sliding_window.py  test_subsequence_merger.py  test_subsequencer.py  test_thresholder.py  test_transformers.py  test_writer.py
tests/algorithms/clustering/: test_distance_metrics.py  test_hierarchical.py  test_kmeans.py  test_kmedoids.py  test_kshape.py
tests/data/: test.h5
tidewater/datatypes/: __init__.py  base.py  labels.py  model.py  scores.py  timeseries.py
tidewater/pipeline/: __init__.py  base.py  distributed.py  transformer_id.py
tidewater/transformers/: base.py  interface.py
tidewater/transformers/adapters/: __init__.py  docker.py
tidewater/transformers/anomaly_detectors/: base.py  kmeans.py
tidewater/transformers/clusterings/: __init__.py  base.py  birch.py  dbscan.py  feature_based.py  happie_clust.py  hierarchical.py  jet.py  kmeans.py  kmedoids.py  kshape.py  meanshift.py  optics.py  samesize.py  time2feat.py
tidewater/transformers/data_handling/: __init__.py  anomaly_slicer.py  interpolater.py  label_reshaper.py  loader.py  plotter.py  (+8 more)
(+25 files in other folders)
