[metadata]
license_file = LICENSE

[coverage:run]
branch = False
omit =
    **/__main__.py

[coverage:report]
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    \.\.\.
    def __repr__
    pass
skip_covered = True
sort = Cover

[mypy]
warn_unused_configs = True
warn_unused_ignores = True
warn_no_return = True

[mypy-tidewater.*]
warn_return_any = True
disallow_untyped_defs = True

[mypy-sklearn.*]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-docker.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-networkx.*]
ignore_missing_imports = True

[mypy-tslearn.*]
ignore_missing_imports = True

[mypy-t2f.*]
ignore_missing_imports = True

[mypy-h5py.*]
ignore_missing_imports = True

[mypy-joblib.*]
ignore_missing_imports = True

[mypy-tqdm.*]
ignore_missing_imports = True

[mypy-meanshift_rs.*]
ignore_missing_imports = True

[mypy-plotly.*]
ignore_missing_imports = True

[mypy-numba.*]
ignore_missing_imports = True

[mypy-tsfresh.*]
ignore_missing_imports = True

[mypy-move_split_merge.*]
ignore_missing_imports = True

[mypy-stumpy.*]
ignore_missing_imports = True

[mypy-redis.*]
ignore_missing_imports = True
